[package]
name = "zero2prod"
version = "0.1.0"
authors = [ "Alpyg <alpyg@pm.me>" ]
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.8.0"
tokio = { version ="1.38.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"
